:bug: [GeoButton] Fix `link` variant alignment

--- a/src/styles/elements/GeoButton/_geo-button.scss
+++ b/src/styles/elements/GeoButton/_geo-button.scss
@@ -259,9 +259,9 @@
     font-style: italic;
     font-weight: $font-weight-regular;
     font-size: $font-size-regular;
+    justify-content: flex-start;
     letter-spacing: initial;
     text-transform: initial;
-
     transition: color $duration-quickly $easing-base;
 
     .geo-button__label#{$css-suffix} {
